--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,12 @@ charset-normalizer==3.4.1
 cleo==2.1.0
 click==8.1.8
 crashtest==0.4.1
+crispy-bootstrap4==2024.10
 cryptography==44.0.0
 distlib==0.3.9
 Django==5.1.4
 django-crispy-forms==2.3
+djangorestframework==3.15.2
 dulwich==0.22.7
 fastjsonschema==2.21.1
 filelock==3.16.1
