--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,8 @@ dependencies = [
     "urllib3 (==2.3.0)",
     "virtualenv (==20.28.1)",
     "crispy-bootstrap4 (==2024.10)",
-    "djangorestframework (==3.15.2)"
+    "djangorestframework (==3.15.2)",
+    "pillow (==11.1.0)"
 ]
 
 
