--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ msgpack==1.1.0
 mypy-extensions==1.0.0
 packaging==24.2
 pathspec==0.12.1
+pillow==11.1.0
 pkginfo==1.12.0
 platformdirs==4.3.6
 poetry==2.0.1
